# simplest-flask-oauth-app

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  oauth2-proxy.Dockerfile  pyproject.toml  render.yaml
